--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.submission2">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -11,11 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Submission2">
         <activity
+            android:name=".ui.favorite.FavoriteActivity"
+            android:exported="true" />
+        <activity
             android:name=".ui.detailUser.DetailUserActivity"
             android:exported="true" />
         <activity
             android:name=".SplashActivity"
-            android:exported="true"  android:theme="@style/SplashScreenStyle">
+            android:exported="true"
+            android:theme="@style/SplashScreenStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
