--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:fullBackupContent="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Submission2">
+        <activity
+            android:name=".ui.detailFavorite.DetailFavoriteActivity"
+            android:exported="true" />
         <activity
             android:name=".ui.favorite.FavoriteActivity"
             android:exported="true" />
