--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,8 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "KEY", '"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"')
     }
 
     buildTypes {
